--- a/public/signup.html
+++ b/public/signup.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Sign Up - Financial Decision Assistant</title>
     <link rel="icon" type="image/jpeg" href="download.jpeg">
-    <link rel="stylesheet" href="styles.css">
     <style>
         /* Basic styling for the signup page */
         nav {
@@ -191,8 +190,8 @@
     <nav>
         <ul>
             <li><a href="/">Home</a></li>
-            <li><a href="/about-us">About Us</a></li>
-            <li><a href="/contact">Contact</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Contact</a></li>
         </ul>
     </nav>
 
